--- a/thrive.html
+++ b/thrive.html
@@ -92,7 +92,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Tools</p>
-				<p style="line-height:1.5em;">Sketch, InVision,<br>Currently tinkering w/ Principle</p>
+				<p style="line-height:1.5em;">Sketch, InVision</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Type</p>
@@ -304,7 +304,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 									<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> Provide <span style="font-weight:bold;">social support 🧑‍🤝‍🧑</span></span>
 								</p>
 							</div>
-							<p>Veganism can be a lonely journey. Connect users with others who are also trying to eat less meat and allow them to engage in friendly competition on leaderboards.<p>
+							<p>The road to veganism was lonely. Help connect people and have them engage in friendly competition with their number of meat-free days.<p>
 </div>
 	</div>
 	</div>
@@ -445,7 +445,7 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 
 		<div class= "row">
 			<div class="col-lg-4 col-md-4 col-sm-4">
-				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE I</span><br>VISUALIZATION OF PROGRESS</h3>
+				<h3 style="color:#fd7660;"><span style="font-weight: bold;"></span>VISUALIZATION OF PROGRESS</h3>
 				<p style="color:#fff;">Users can daily log their meat-free days throughout the week and be encouraged by the visual representation of the improving environment. </p>
 				<p style="color:#fff;">Users can track their progress and see the positive impact of their accumulated meat-free days.</p>
 </div>
@@ -456,7 +456,7 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 
 		<div class= "row">
 			<div class="col-lg-4 col-md-4 col-sm-4">
-				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE II</span><br>FRIENDLY MOTIVATION</h3>
+				<h3 style="color:#fd7660;"><span style="font-weight: bold;"></span>FRIENDLY MOTIVATION</h3>
 				<p style="color:#fff;">Users can form groups with people who have similar goals and compare how they rank to their peers in the number of meat-free days.</p></div>
 				<div class="col-lg-8 col-md-8 col-sm-8">
 			<br>	<img class="center" src="images/groups.gif" style="max-width:60%" alt="manager"><br><br><br><br><br><br><br><br>
@@ -464,7 +464,7 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 		</div>
 		<div class= "row">
 			<div class="col-lg-4 col-md-4 col-sm-4">
-				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE III</span><br>TOOLS FOR SUCCESS</h3>
+				<h3 style="color:#fd7660;"><span style="font-weight: bold;"></span>TOOLS FOR SUCCESS</h3>
 				<p style="color:#fff;">Users can look up recipes or learn about vegan diets to equip themselves on this journey.</p>
 			</div>
 			<div class="col-lg-8 col-md-8 col-sm-8">
@@ -497,11 +497,11 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-										<p><span style= "font-weight:700;">1. DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brainpower on other more complex design decisions.</br></br>
+										<p><span style= "font-weight:700;">DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brainpower on other more complex design decisions.</br></br>
 
-										<span style= "font-weight:700;">2. Think in product & not features </span><br> Originally, I had about six features I wanted to include. But feedback showed that having all six features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.<br></br>
+										<span style= "font-weight:700;">Think in product & not features </span><br> Originally, I had about six features I wanted to include. But feedback showed that having all six features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.<br></br>
 
-<span style= "font-weight:700;">3. Even as a product designer, visual design skills are important</span><br>With great visual design, users are willing to take the time to learn even the most unfamiliar products. Great visual design is undeniably a part of a great user experience. Every design decision needs to be intentional.</p>
+<span style= "font-weight:700;">Even as a product designer, visual design skills are important</span><br>With great visual design, users are willing to take the time to learn even the most unfamiliar products. Great visual design is undeniably a part of a great user experience. Every design decision needs to be intentional.</p>
 							<br><br>
 
 
