--- a/lexmark.html
+++ b/lexmark.html
@@ -67,7 +67,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1>ServiceNow Redesign</h1>
 <h2>
-	ServiceNow is a customizable SaaS web app for Lexmark employees. Employees can submit request forms for any necessary services or jobs on the platform.
+	ServiceNow is a customizable SaaS web app for Lexmark employees. On the platform, employees can submit request forms for any necessary services or jobs.
 
 <br><br>
 
@@ -93,7 +93,7 @@
 		</p>
 			</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">My Role</span><br>I conducted user research, led the design direction, built a fully functioning prototype, and prepared the documentation for developer hand-off.
+									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">My Role</span><br>I conducted user research, led the design direction, built a fully functioning prototype, and prepared the documentation for developer hand-off. 🎉
 </p>
 										</div>
 
@@ -377,7 +377,7 @@
 					</p></div></div>
 					<div class="row">
 						<div class="col-lg-8 col-md-8 col-sm-12">
-							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%">
+							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%;">
 				</div>
 
 				<div class="col-lg-4 col-md-4 col-sm-12">
@@ -446,16 +446,16 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Wireframes</h4>
-					<h3>Working with technical limitations</h3>
-					<p>Initially, I was exploring different ways to design a single column form. There was plenty of research online that supported single column as best practice. However, when I was showing wireframes for a one column design to the developer, she stated we needed to stick with the original two column design format.</p></div></div>
+					<h3>User needs weren't the only consideration</h3>
+					<p>Initially, I explored different single-column formats for the form redesign. Unfortunately, the developer did not approve of the single-column designs because of the ServiceNow platform's technical limitations.</p></div></div>
+					<br>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
 							<img src="images/lexmarkwireframes.png" class="img-responsive center" style="max-width:100%">
 				</div>
 				</div>
 				</div>
-			</div>
-		</div>
+
 	</section>
 
 
@@ -464,7 +464,8 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Mockup</h4>
-					<h3>Working with Lexmark's components library</h3>
+					<h3>A developed UX team usually means an already existing design system
+</h3>
 					<p>Although I had my own vision for the visual design, I had to work with spec that already existed at Lexmark. ServiceNow was a huge platform and I was only working on the Facilities & Site section of the platform. The argument that this specific section needed to look completely different from the rest was a weak one. For the first mock up, I designed within Lexmark's design system.</p></div></div>
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-12">
@@ -487,7 +488,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Deep Dive</h4>
-					<h3>Content heavy screens does not have to have a bad UX</h3>
+					<h3>Content heavy screens does not have to be complex</h3>
 				</div>
 			</div>
 			<div class="row">
