--- a/lexmark.html
+++ b/lexmark.html
@@ -460,104 +460,94 @@
 
 
 	<section>
-		<div class="contentblock content-wrapper900">
+		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Mockup</h4>
-					<h3>A developed UX team usually means an already existing design system
+					<h4>Initial Mockup</h4>
+					<h3>Mature UX teams already have their design system
 </h3>
-					<p>Although I had my own vision for the visual design, I had to work with spec that already existed at Lexmark. ServiceNow was a huge platform and I was only working on the Facilities & Site section of the platform. The argument that this specific section needed to look completely different from the rest was a weak one. For the first mock up, I designed within Lexmark's design system.</p></div></div>
-					<div class="row">
+					<p>
+					The UX team already had its components library and spec documentation. While the design system saved me time from creating UI elements, it also meant I couldn't influence the visual language. At this point, my reasoning for updating the visuals for one section within the ServiceNow platform was weak and tabled. </p></div></div>
+<div></section>
+
+<div class="contentblock">
+					<div class="row"><br>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+									<img src="images/lexington_page.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
+
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
+									<h4 style="padding-bottom:5px;">Why Cards?</h4>
+									<div class='parent'>
+										<p><div class='numberCircle inline-block-child'>1</div>
+											<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Easy to Scan</span>
+										</p>
+									</div>
+
+					<p>Cards divide information into meaningful sections and content hierarchy is clear.</p>
+
+					<div class='parent'>
+						<p><div class='numberCircle inline-block-child'>2</div>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">More Surface Area</span>
+						</p>
+					</div>
+
+				<p>The previous dropdown interaction left no room to explain confusing form titles. Cards have ample room to provide users with helpful descriptions.										</p>
+
+
+								</div>
+						</div>
+
+
+
+
+				<br><br><br><br>	<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-12">
 							<img src="images/ergonomic_furniture.png" class="img-responsive center" style="max-width:100%;  box-shadow: 0 0 10px; color: #EBEBEB;">
 				</div>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+						<h4 style="padding-bottom:5px;padding-top:35em;">What's Changed?</h4>
+						<div class='parent'>
+							<p><div class='numberCircle inline-block-child'>1</div>
+								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Improved Content Hierarchy</span>
+							</p>
+						</div>
 
-				<div class="col-lg-6 col-md-6 col-sm-12">
-					<img src="images/lexington_page.png" class="img-responsive center" style="max-width:100%;  box-shadow: 0 0 10px; color: #EBEBEB;">
-		</div>
+					<p>Categorizing the content helps with providing context for unclear terms but also for improved scannability. </p>
+
+					<div class='parent'>
+					<p><div class='numberCircle inline-block-child'>2</div>
+					<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Proactive Error Prevention</span>
+					</p>
+					</div>
+
+					<p>Limiting user action to prevent errors. For example, using radio buttons for either/or relationships when previously, the forms employed checkboxes.										</p>
+
+					<p>Using dropdowns for building number selection.</p>
+
+					</div>
+
 
 				</div>
 				</div>
-			</div>
-		</div>
-	</section>
 
 
-	<section>
-		<div class="contentblock content-wrapper900">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Deep Dive</h4>
-					<h3>Content heavy screens does not have to be complex</h3>
+				<div class="contentblock" style="max-width:1050px;">
+					<div class="row">
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+							<img src="images/lexmarkoldcharge.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
+
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+							<img src="images/lexmark1.gif" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
+		<br>
+															<p> <span style= "font-weight:600;">What's changed?
+															</span><br>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-					<img src="images/newcomparison2.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
-				</div>
-				<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
-				</div> -->
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
-<br>
-													<p> <span style= "font-weight:600;">Change 1<br>
-														Cards > Dropdown</span><br>Cards allow room for description texts for potentially confusing form titles such as "Badge Reader - Security Lexington".</p>
 
-
-					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
-					</p> -->
-
-				</div>
-		</div>
-
-		<div class="row">
-			<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-
-			<img src="images/newcomparison4.png" class="img-responsive" style="; float:right; padding: 25px 0px;">
-
-		</div>
-
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:500px; padding-bottom: 5em;">
-					<br>
-
-	<p><span style= "font-weight:600;">Change 2</span><br>Improved hierarchy with categorization of content <br></p>
-
-
-													<p><span style= "font-weight:600;">Change 3</span><br>Error prevention: radio buttons for either/or relationships</p>
-
-	<p><span style= "font-weight:600;">Change 4</span><br>Helper text for confused users</p>
-
-					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
-					</p> -->
-
-				</div>
-		</div></div>
-	</section>
-
-
-
-	<section>
-		<div class="contentblock content-wrapper900">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h3>Aha moment! Forms can be dynamic</h3>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
-					<img src="images/lexmarkoldcharge.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
-
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<img src="images/lexmark1.gif" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
-<br>
-													<p> <span style= "font-weight:600;">What's changed?
-													</span><br>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
-		</div>
-
-				</div>
+						</div>
 
 				<div class="row">
 					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
