--- a/lexmark.html
+++ b/lexmark.html
@@ -575,35 +575,76 @@
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Prototype</h4>
-					<h3>Fully functioning prototype on Axure</h3>
-	</div></div>
+					<h4>Final Usability Test</h4>
+					<h3>ServiceNow was no longer a pain</h3>
+<p>After "finalizing" the design, I built a fully functioning prototype on Axure and took it to testing. Compared to the original design, there was a 36% improvement in the avg task success rate! </p>
 
+</div>
+</div>
 	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-top:15px;">
+		<div class="col-lg-10 col-md-10 col-sm-10 col-xs-12" style="padding-top:15px;">
 
 			<iframe title="vimeo-player" src="https://player.vimeo.com/video/420746318?muted=1&title=0&byline=0&portrait=0" width="640" height="400" frameborder="0" allowfullscreen style="box-shadow: 0 0 10px; color: #EBEBEB;"></iframe>
+			<p></p>
 				</div>
-			</div>
+				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" style="padding-top:15px;"><br>
+<p><span style="font-weight:600;">Test Details</span><br>10 tasks<br>10 participants<br><a href="https://docs.google.com/spreadsheets/d/1djY4QfYwwFXe8gQY-8s3KHBPcFOgd7yzSOrXo1p72Nk/edit?usp=sharing" class="lexmarklink" target="_blank">Data Link</a> </p><br>
+
+<p><span style="font-weight:600;">Next Step</span><br>Documentation for developer hand-off</p>
+
+
+			</div>		</div>
 </section>
 
-<section>
-	<div class="contentblock content-wrapper900">
+<section id="gifbg1">
+	<div class="content-wrapper900">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>Final Usability Test</h4>
-				<h3>My design demonstrated a 36% improvement</h3>
+				<h4 style="color:#fff;">After the Implementation</h4>
+				<h3 style="color:#fff;">I wasn't satisfied with the visual design </h3>
+				<p style="color:#fff;">I decided to rework the visuals of this project after my internship ended since I didn't have much independence in that area.</p><br>
+
 </div></div>
+</div></section>
+<section id="gifbg2">
 
 															 		 <div class="row">
-																 <!-- <div class="col-lg-6 col-md-6 col-sm-12">
-								                   <P>Usability testing of the new design showed a 36% improvement. Like the previous test, we recruited ten employees and each test included ten of the same tasks. After the final round of testing, I made minor changes to strings to clear up some confusion in hopes to raise the 89% success rate before writing the documentation for developers.</p></div> -->
-																		 <div class="col-lg-12 col-md-12 col-sm-12">
-								                   <img src="images/lexmarkfinaltest.png" class="img-responsive" style="max-width:100%"></div></div>
-																	 <div class="row">
-		 														<div class="col-lg-12 col-md-12 col-sm-12">
-		 															<P><br><br>After the final round of testing which included the same 10 tasks as before but conducted with 10 different employees, I made minor changes to strings to hopefully further increase the 89% success rate. I finished off the project with writing and turning in the documentation for developers.</p></div></div>
-														 </div>
+																		 <div class="col-lg-3 col-md-3 col-sm-12">
+
+																		 <img src="images/lexington_page.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+
+</div>
+																		 <div class="col-lg-5 col-md-5 col-sm-12">
+																	<img src="images/home.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+
+</div>
+
+<div class="col-lg-4 col-md-4 col-sm-4">
+<p style="color:#fff;">I replaced black borders around the cards with drop shadow. By adding a drop shadow, I felt it increased the feeling of clickability and the previous black lines were too harsh so it didn't help with users to focus on the card content. Additionally, I rounded the card border to increase a sense of friendliness. </p>
+
+<p style="color:#fff;">The grey header was also bringing a lot of warm tones. I wanted the interface to be more modern looking so I opted for a cooler darker toned grey for the header.</p>
+<p style="color:#fff;"> </p>
+</div>
+</div><br><br><br><br>
+														 <div class="row">
+															 <div class="col-lg-3 col-md-3 col-sm-12">
+
+															 <img src="images/ergonomic_furniture.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+
+</div>
+															 <div class="col-lg-5 col-md-5 col-sm-12">
+														<img src="images/rest.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+
+</div>
+
+<div class="col-lg-4 col-md-4 col-sm-4">
+<p style="color:#fff;">I converted two columns to one column format. The success rate should stay the same because only the visual design has improved. </p>
+
+<p style="color:#fff;">I also gave the submit button a different background color to make it stand out more.</p>
+<p style="color:#fff;"> </p>
+</div>
+											 </div>
+
 								             </div>
 													 </section>
 
