--- a/lexmark.html
+++ b/lexmark.html
@@ -65,7 +65,7 @@
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h1>ServiceNow Redesign</h1>
+					<h1>ServiceNow Redesign at Lexmark</h1>
 <h2>
 	ServiceNow is a customizable SaaS web app for Lexmark employees. On the platform, employees can submit request forms for any necessary services or jobs.
 
@@ -154,7 +154,8 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-					<p>ServiceNow only received 12% of service requests. In the past 12 months, the phone lines received 20,000+ requests and were often busy.
+					<p>
+In the past 12 months, ServiceNow only received 12% of service requests, and the phone lines received over 20,000 requests.
 					</p>
 
 	<p>Busy phone lines meant additional employees were required, and employees experienced longer wait times. ServiceNow ROI was abysmal.</p>
@@ -225,11 +226,12 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Interviews</h4>
 					<h3>There was ample opportunity to improve the platform</h3>
+					<p>I conducted three semi-structured interviews with target users to validate the existence of a problem, develop a general understanding of user motivations, and identify design opportunities.</p>
 				</div>
 			</div>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:15%; padding-top:1em;">
+							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:15%;">
 
 						</div>
 					</div>
@@ -477,22 +479,22 @@
 
 								</div>
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
-									<h4 style="padding-bottom:5px;">Why Cards?</h4>
+									<h4 style="padding-bottom:5px;   text-transform: none;">Why did I replace the dropdown with cards?</h4>
 									<div class='parent'>
-										<p><div class='numberCircle inline-block-child'>1</div>
+										<p><div class='numberCircle2 inline-block-child'>1</div>
 											<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Easy to Scan</span>
 										</p>
 									</div>
 
-					<p>Cards divide information into meaningful sections and content hierarchy is clear.</p>
+					<p>Cards divide information into meaningful sections for clear content hierarchy.</p>
 
 					<div class='parent'>
-						<p><div class='numberCircle inline-block-child'>2</div>
+						<p><div class='numberCircle2 inline-block-child'>2</div>
 							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">More Surface Area</span>
 						</p>
 					</div>
 
-				<p>The previous dropdown interaction left no room to explain confusing form titles. Cards have ample room to provide users with helpful descriptions.										</p>
+				<p>The previous dropdown interaction left no room to explain confusing form titles. Cards can include helpful description text.										</p>
 
 
 								</div>
@@ -503,67 +505,56 @@
 
 				<br><br><br><br>	<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-12">
-							<img src="images/ergonomic_furniture.png" class="img-responsive center" style="max-width:100%;  box-shadow: 0 0 10px; color: #EBEBEB;">
+							<img src="images/ergonomic_furniture2.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
 				</div>
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
-						<h4 style="padding-bottom:5px;padding-top:35em;">What's Changed?</h4>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top:5em;">
+							<h4 style="padding-bottom:5px;   text-transform: none;">What's Changed?</h4>
 						<div class='parent'>
-							<p><div class='numberCircle inline-block-child'>1</div>
-								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Improved Content Hierarchy</span>
+							<p><div class='numberCircle2 inline-block-child'>3</div>
+								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Added Category Titles</span>
 							</p>
 						</div>
 
-					<p>Categorizing the content helps with providing context for unclear terms but also for improved scannability. </p>
+					<p>Categorizing the content helps with providing context for unclear terms but also improves scannability. </p>
 
 					<div class='parent'>
-					<p><div class='numberCircle inline-block-child'>2</div>
-					<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Proactive Error Prevention</span>
+					<p><div class='numberCircle2 inline-block-child'>4</div>
+					<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Limiting User Action</span>
 					</p>
 					</div>
 
-					<p>Limiting user action to prevent errors. For example, using radio buttons for either/or relationships when previously, the forms employed checkboxes.										</p>
-
-					<p>Using dropdowns for building number selection.</p>
-
+					<p>Included proactive error prevention such as using radio buttons for either/or relationships when previously, the forms employed checkboxes.										</p>
+					<div class='parent'>
+						<p><div class='numberCircle2 inline-block-child'>5</div>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Help Reduce Typos</span>
+						</p>
 					</div>
 
+				<p>Replaced input field for building information with dropdown detailing 6 options.</p>
+		</div>
 
 				</div>
-				</div>
-
-
-				<div class="contentblock" style="max-width:1050px;">
+<br><br><br>
 					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
-							<img src="images/lexmarkoldcharge.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
-
-						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<img src="images/lexmark1.gif" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
+							<img src="images/lexmark1.gif" class="img-responsive" style="max-width:600px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
 						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
+						<div class="col-lg-6col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
 		<br>
 															<p> <span style= "font-weight:600;">What's changed?
 															</span><br>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
-				</div>
+				</div>			</div>
 
-						</div>
-
-				<div class="row">
-					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-						<img src="images/lexmark2.gif" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
-					</div>
-					<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-						<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
-					</div> -->
-					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
-		<br>
-														<p> <span style= "font-weight:600;">What's changed?
-														</span><br>Previously, all the information was visible on load, but for the redesign, options will show depending on what the users click</p>
-			</div>
-
-					</div>
-
+				<br><br><br>
+									<div class="row">
+										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+											<img src="images/lexmark2.gif" class="img-responsive" style="max-width:600px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
+										</div>
+										<div class="col-lg-6col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
+						<br>
+																			<p> <span style= "font-weight:600;">What's changed?
+																			</span><br>Previously, all the information was visible on load, but for the redesign, options will show depending on what the users click</p>
+								</div>
 
 		</div></div>
 	</section>
