--- a/lexmark.html
+++ b/lexmark.html
@@ -541,8 +541,14 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 						</div>
 						<div class="col-lg-6col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
 		<br>
-															<p> <span style= "font-weight:600;">What's changed?
-															</span><br>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
+
+		<div class='parent'>
+			<p><div class='numberCircle2 inline-block-child'>6</div>
+				<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Help Reduce Typos</span>
+			</p>
+		</div>
+
+	<p>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
 				</div>			</div>
 
 				<br><br><br>
@@ -552,8 +558,14 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 										</div>
 										<div class="col-lg-6col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
 						<br>
-																			<p> <span style= "font-weight:600;">What's changed?
-																			</span><br>Previously, all the information was visible on load, but for the redesign, options will show depending on what the users click</p>
+
+						<div class='parent'>
+							<p><div class='numberCircle2 inline-block-child'>7</div>
+								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Show Only Relevant Information</span>
+							</p>
+						</div>
+
+					<p>Previously, all the information was visible on load, but for the redesign, options will show depending on what the users click</p>
 								</div>
 
 		</div></div>
