--- a/lexmark.html
+++ b/lexmark.html
@@ -508,7 +508,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 							<img src="images/ergonomic_furniture2.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
 				</div>
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top:5em;">
-							<h4 style="padding-bottom:5px;   text-transform: none;">What's Changed?</h4>
+							<h4 style="padding-bottom:5px;   text-transform: none;">What changes did I include in the form redesign?</h4>
 						<div class='parent'>
 							<p><div class='numberCircle2 inline-block-child'>3</div>
 								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Added Category Titles</span>
@@ -544,7 +544,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 
 		<div class='parent'>
 			<p><div class='numberCircle2 inline-block-child'>6</div>
-				<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Help Reduce Typos</span>
+				<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Save Screen Real Estate</span>
 			</p>
 		</div>
 
@@ -561,11 +561,11 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 
 						<div class='parent'>
 							<p><div class='numberCircle2 inline-block-child'>7</div>
-								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Show Only Relevant Information</span>
+								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Conditional Logic</span>
 							</p>
 						</div>
 
-					<p>Previously, all the information was visible on load, but for the redesign, options will show depending on what the users click</p>
+					<p>Show additional options depending on what the users clicks. </p>
 								</div>
 
 		</div></div>
@@ -579,8 +579,8 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Final Usability Test</h4>
-					<h3>ServiceNow was no longer a pain</h3>
-<p>After "finalizing" the design, I built a fully functioning prototype on Axure and took it to testing. Compared to the original design, there was a 36% improvement in the avg task success rate! </p>
+					<h3>ServiceNow was no longer a pain... 89% success rate!</h3>
+<p>After "finalizing" the design, I built a prototype on Axure and wanted to see if the redesign made any difference. Compared to the original design, there was a 36% improvement in the avg task success rate! </p>
 
 </div>
 </div>
@@ -591,7 +591,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 			<p></p>
 				</div>
 				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" style="padding-top:15px;"><br>
-<p><span style="font-weight:600;">Test Details</span><br>10 tasks<br>10 participants<br><a href="https://docs.google.com/spreadsheets/d/1djY4QfYwwFXe8gQY-8s3KHBPcFOgd7yzSOrXo1p72Nk/edit?usp=sharing" class="lexmarklink" target="_blank">Data Link</a> </p><br>
+<p><span style="font-weight:600;">Test Details</span><br>10 tasks<br>10 participants<br><a href="https://docs.google.com/spreadsheets/d/1djY4QfYwwFXe8gQY-8s3KHBPcFOgd7yzSOrXo1p72Nk/edit?usp=sharing" class="lexmarklink" target="_blank">Data</a> </p><br>
 
 <p><span style="font-weight:600;">Next Step</span><br>Documentation for developer hand-off</p>
 
@@ -614,7 +614,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 															 		 <div class="row">
 																		 <div class="col-lg-3 col-md-3 col-sm-12">
 
-																		 <img src="images/lexington_page.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+																		 <img src="images/lexington_page1.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
 																		 <div class="col-lg-5 col-md-5 col-sm-12">
@@ -623,16 +623,17 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 </div>
 
 <div class="col-lg-4 col-md-4 col-sm-4">
-<p style="color:#fff;">I replaced black borders around the cards with drop shadow. By adding a drop shadow, I felt it increased the feeling of clickability and the previous black lines were too harsh so it didn't help with users to focus on the card content. Additionally, I rounded the card border to increase a sense of friendliness. </p>
+<p style="color:#fff;">I replaced the cards' black border with drop shadows to increase the feeling of clickability. The previous black border was harsh, and it interfered with users' focus. I also rounded the card corners for a friendlier feel.
+</p>
 
-<p style="color:#fff;">The grey header was also bringing a lot of warm tones. I wanted the interface to be more modern looking so I opted for a cooler darker toned grey for the header.</p>
+<p style="color:#fff;">I wanted the interface to have a modern feel, so I opted for a cooler darker-toned grey header that was consistent with the ServiceNow homepage.</p>
 <p style="color:#fff;"> </p>
 </div>
 </div><br><br><br><br>
 														 <div class="row">
 															 <div class="col-lg-3 col-md-3 col-sm-12">
 
-															 <img src="images/ergonomic_furniture.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+															 <img src="images/ergonomic_furniture1.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
 															 <div class="col-lg-5 col-md-5 col-sm-12">
@@ -661,11 +662,11 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 												 							<div class="row">
 												 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-												 											<p><span style= "font-weight:600;">1. Communicate often and early with developers.</span><br>Actually, the quality of communication matters too. Be specific with details of the design and be pointed with questions about limitations.</br></br>
+												 											<p><span style= "font-weight:600;">User needs aren't the only consideration</span><br>Communicate with developers early & often. Be specific with questions. A great UX designer can successfully negotiate between user needs, business needs, and technical limitations.</br></br>
 
-												 											<span style= "font-weight:600;">2. Buisness are important too </span><br> As a designer, we cannot always do what is best for our users. We need to be able to do what is best for our users given the resources that we have. <br></br>
+												 											<span style= "font-weight:600;">Numbers can give me a seat at the table</span><br> In an engineering focused company, UX might not be valued. Discuss metrics in ways others will understand. Discuss numbers such as success rates, and how improving the UX will decrease cost. <br></br>
 
-												 	<span style= "font-weight:600;">3. Use current components if there is any but be persuasive about updating it</span><br>I wish I had more time to help update our design system or even push for a separate style guide for internal tools than use the same one for consumer facing products.</p>
+												 	<span style= "font-weight:600;">Have a strong argument for updating current design systems</span><br>I wish I had more time to help update our design system or even push for a separate style guide for internal tools than use the same one for consumer facing products.</p>
 												 								<br><br>
 
 
