--- a/lexmark.html
+++ b/lexmark.html
@@ -226,7 +226,8 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Interviews</h4>
 					<h3>There was ample opportunity to improve the platform</h3>
-					<p>I conducted three semi-structured interviews with target users to validate the existence of a problem, develop a general understanding of user motivations, and identify design opportunities.</p>
+					<p>I conducted three semi-structured interviews with target users to understand their motivations, how the ServiceNow experience fits in their world, and identify design opportunities.
+</p>
 				</div>
 			</div>
 					<div class="row">
@@ -666,9 +667,8 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 
 												 											<span style= "font-weight:600;">Numbers can give me a seat at the table</span><br> In an engineering focused company, UX might not be valued. Discuss metrics in ways others will understand. Discuss numbers such as success rates, and how improving the UX will decrease cost. <br></br>
 
-												 	<span style= "font-weight:600;">Have a strong argument for updating current design systems</span><br>I wish I had more time to help update our design system or even push for a separate style guide for internal tools than use the same one for consumer facing products.</p>
+												 	<span style= "font-weight:600;">Have a strong argument for updating current design systems</span><br>I wish I had more time to update UI components to make them more purposeful for high information desnsity.</p>
 												 								<br><br>
-
 
 												 									</p>
 												 							</div>
