--- a/lexmark.html
+++ b/lexmark.html
@@ -667,7 +667,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 
 												 											<span style= "font-weight:600;">Numbers can give me a seat at the table</span><br> In an engineering focused company, UX might not be valued. Discuss metrics in ways others will understand. Discuss numbers such as success rates, and how improving the UX will decrease cost. <br></br>
 
-												 	<span style= "font-weight:600;">Have a strong argument for updating current design systems</span><br>I wish I had more time to update UI components to make them more purposeful for high information desnsity.</p>
+												 	<span style= "font-weight:600;">Have a strong argument for updating current design systems</span><br>I wish I had more time to update UI components to make them more purposeful for high information desnsity. When attempting to evole an existing visual system, I need to have clear rationale.</p>
 												 								<br><br>
 
 												 									</p>
